--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
+    "build": "cd client && react-scripts build",
     "dev": "nodemon index.js"
   },
   "keywords": [],
