--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "start": "node index.js",
     "dev": "nodemon index.js"
   },
+  "engines": {
+    "node": "12.12.0",
+    "npm": "6.12.0"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
