--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "react-scripts": "3.2.0"
+    "express": "^4.17.1"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
